--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,12 +4,10 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - echo Compiling the Python code...
-  post_build:
+   post_build:
     commands:
       - echo Build completed on `date`
 
 artifacts:
-    files:
-        - *
-        
+  files:
+    - target/pino.zip
