--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,9 +1,6 @@
 version: 0.2
 
-phases:
-  build:
-    commands:
-      - echo Build started on
-  post_build:
-    commands:
-      - echo Build completed on `date`
+artifacts:
+  type: zip
+  files:
+    - '**/*'
